# project-kubernetes-localstack

./: .gitignore  .pre-commit-config.yaml  .tflint.hcl  .yamllint.yaml  README.md  kind-config.yaml
.github/workflows/: tests.yaml
app/: .env-example  dockerfile  pyproject.toml
app/my_app/: app.py
app/my_app/static/: swagger.json
app/my_app/user_management/: user_routes.py  user_service.py
app/tests/: test_user_routes.py  test_user_service.py
helm-chart/my-app/: Chart.yaml  values.yaml
helm-chart/my-app/templates/: deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
scripts/: setup.sh  teardown.sh  test-api.sh
terraform/: main.tf  provider.tf  terraform.tfvars  variables.tf
terraform/modules/dynamodb/: main.tf  variables.tf
terraform/modules/s3/: main.tf  variables.tf
